--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@
   }
 
   .title {
-    font-family: ProximaNova;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 21px;
     font-weight: 600;
     color: #444444;
