--- a/css/members.css
+++ b/css/members.css
@@ -16,60 +16,49 @@ body {
 }
 
 
-/* button formatting */
-.btn {
-    color: #007D2F;
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: bolder;
-    font-size: 2.3vw;
-    background:none;
-    border:none;
-    cursor: pointer;
-    padding:0.3em 1.2em;
-    margin:0.6em 0.3em 0.3em 0;
-    float: right;
-}
-.btn:hover{
-    color:#897261;
-}
-/*side navigation menu*/
-.sidenav img{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 70%;
-    position: relative;
-}
-.sidenav {
-    width: 264px;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    left: 0px;
-    top: 0px;
-    overflow: auto; /*disables horizontal scroll*/
-    position: fixed; /*scroll bar stays in place when user is scrolling*/
-    background: rgba(155, 188, 115, 0.9);
+/* contact styles */
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #ffe5ec;
+    
 }
 
-/*navigation links*/
-.sidenav a {
-    padding: 10px 0px 15px 0px;
-    display: block;
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #9381ff;
+    overflow: hidden;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
     text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 25px;
-    line-height: 44px;
-    color: #007D2F;
-}
-.buttons {
-    padding: 10px 0px 15px 0px;
-    display: block;
-}
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #b8b8ff;
+    color: black;
+  }
+  
+  /* Add a color to the active/current link */
+  .topnav a.active {
+    background-color: ;
+    color: white;
+  }
+
+  .topnav a.logout{
+    float: right;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
 
 /*buttons that are on the sidebar*/
 .sidebuttons {
