--- a/css/nav.css
+++ b/css/nav.css
@@ -7,7 +7,7 @@
 
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: #9381ff;
+    background-color: #054a91;
     overflow: hidden;
   }
   
