--- a/css/contacts.css
+++ b/css/contacts.css
@@ -1,7 +1,7 @@
 /* contact styles */
 .body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #f0e6f2; 
+    background-color: #dbe4ee; 
     
 }
 
