--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@
 
   .logo {
     height: 30px;
-    color: #999999;
+    color: #000000;
     width: 30px;
   }
 
@@ -66,7 +66,7 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 21px;
     font-weight: 600;
-    color: #444444;
+    color: #000000;
   }
 
   .body {
@@ -76,7 +76,7 @@
     align-items: center;
     height: 100%;
     margin: 0;
-    background-color: #f0e6f2; /* Light pastel pink background color */
+    background-color: #dbe4ee; /* Light pastel pink background color */
   }
 
   .box-container {
@@ -93,7 +93,7 @@
     height: 350px;
     width: 100%;
     padding: 20px;
-    background-color: rgba(255, 192, 203, 0.8); 
+    background-color: #81a4cd; 
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
@@ -108,7 +108,7 @@
     width: 100%;
     padding: 2%;
     margin-top: 2%;
-    background-color: #ff69b4; 
+    background-color: #054a91; 
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -167,11 +167,11 @@
   }
 
   #kitty {
-    width:125px; 
-    height:125px;
+    width:200px; 
+    height:200px;
     position: relative;
-    top:175px;
-    left:-75px;
+    top:120px;
+    left:-10px;
     transition: 0.5s ease-in-out;
   }
 
