Fixed js errors, and nav active display page

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -2,7 +2,7 @@
 .body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #dbe4ee; 
-    
+    margin-top:
 }
 
 /* Add a black background color to the top navigation */
