--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,3 +1,11 @@
+:root {
+	--primary-color: #3E7CB1;
+	--secondary-color: #054A91;
+	--tertiary-color: #81A4CD;
+	--accent-color: #DBE4EE;
+  }
+
+
 .navbar {
 	background-color: var(--primary-color);
 	color: #fff;
