--- a/css/styles.css
+++ b/css/styles.css
@@ -211,3 +211,43 @@
   cursor: pointer;
   display: inline-block;
 }
+
+/* Old styles above */
+:root {
+	--primary-color: #3E7CB1;
+	--secondary-color: #054A91;
+	--tertiary-color: #81A4CD;
+	--accent-color: #DBE4EE;
+  }
+
+body {
+	height: 100%;
+	width: 100vw;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	overflow:hidden;
+	gap: 30px;
+	margin-top:80px;
+	background-color: var(--accent-color);
+}
+
+header {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 8px;
+	padding: 25px;
+}
+
+.heading {
+	color: var(--secondary-color);
+}
+
+.title {
+	font-weight: 400;
+	letter-spacing: 1.5px;
+}
