--- a/css/styles.css
+++ b/css/styles.css
@@ -260,7 +260,7 @@ header {
 	background-color: white;
 	box-shadow: 8px 8px 20px var(--accent-color);
 	position: relative;
-	overflow: hidden;
+	overflow: scroll; /* changed from hidden to stuff */
 	transition: all 0.5s ease-in-out;
   min-height:200px; /* Remove later */
 }
@@ -301,4 +301,36 @@ header {
 
 .moveslider {
 	left: 225px;
+}
+
+.form-section {
+  max-width: 100%;
+  text-align: center;
+  position: relative;
+  height: 100%;
+  width: 100%;
+  padding: 20px;
+  overflow: hidden;
+}
+
+.login-box {
+	margin-top: 10%;
+}
+.login-box,
+.register-box {
+	transition: all 0.5s ease-in-out;
+}
+
+.ele {
+	height: 60px;
+	width: 400px;
+	outline: none;
+	border: none;
+	color: rgb(77, 77, 77);
+	background-color: rgb(240, 240, 240);
+	border-radius: 50px;
+	padding-left: 30px;
+	font-size: 18px;
+	margin-top:2%;
+	margin-bottom:2%;
 }
