next tiny set of things

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+@import url(
+"https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 .button {
   border-radius: 3px;
   background-color: #0069ff;
@@ -11,6 +14,14 @@
 }
 
 /* Old styles above */
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: "Poppins", sans-serif;
+}
+
 :root {
 	--primary-color: #3E7CB1;
 	--secondary-color: #054A91;
@@ -58,9 +69,8 @@ header {
 	background-color: white;
 	box-shadow: 8px 8px 20px var(--accent-color);
 	position: relative;
-	overflow: scroll; /* changed from hidden to stuff */
+	overflow: hidden;
 	transition: all 0.5s ease-in-out;
-  min-height:200px; /* Remove later */
 }
 
 .btn {
