--- a/css/styles.css
+++ b/css/styles.css
@@ -143,6 +143,44 @@ header {
 	margin-bottom:2%;
 }
 
+.toggle-password-login {
+  position: absolute;
+  top: 50%;
+  right: 15px;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+
+.toggle-password-register {
+  position: absolute;
+  top: 75%;
+  right: 15px;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+
+#field-container {
+	height: 500px;
+}
+
+#loginForm {
+    position: relative;
+    left: 0px;
+}
+
+
+#loginButton,
+#loginName,
+#loginPassword {
+  position: relative;
+}
+
+#signupForm {
+  position: relative;
+  left: 500px;
+  top: -295px;
+}
+
 
 /* For Responsiveness of the page */
 
