--- a/css/contacts.css
+++ b/css/contacts.css
@@ -1,6 +1,71 @@
-/* contact styles */
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #ffe5ec;
-    
-}
+h1{
+    font-size: 30px;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 300;
+    text-align: center;
+    margin-bottom: 15px;
+  }
+  table{
+    width:100%;
+    table-layout: fixed;
+  }
+  .tbl-header{
+    background-color: #054a91;
+   }
+  .tbl-content{
+    height:400px;
+    overflow-x:auto;
+    margin-top: 0px;
+    border: 1px solid #3e7cb1;
+  }
+  th{
+    padding: 20px 15px;
+    text-align: left;
+    font-weight: 500;
+    font-size: 16px;
+    color: white;
+    text-transform: uppercase;
+  }
+  
+  tr:hover {
+    background-color: #3e7cb1;
+    color: white;
+  }
+
+  td{
+    padding: 15px;
+    text-align: left;
+    vertical-align:middle;
+    font-weight: 400;
+    font-size: 14px;
+    color: black;
+    border-bottom: solid 1px #3e7cb1;
+  }
+  
+  /*background style*/
+  @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
+  body{
+    background: -webkit-linear-gradient(left, #81a4cd, #dbe4ee);
+    background: linear-gradient(to right, #81a4cd, #dbe4ee);
+    font-family: 'Roboto', sans-serif;
+  }
+
+  /*spacing for entire header and table together*/
+  section{
+    margin: 150px;
+  }
+  
+  
+  
+  /* for custom scrollbar for webkit browser*/
+  
+  ::-webkit-scrollbar {
+      width: 10px;
+  } 
+  ::-webkit-scrollbar-track {
+      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+  } 
+  ::-webkit-scrollbar-thumb {
+      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+  }
