--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,5 @@
 @import url(
 "https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
-.button {
-  border-radius: 3px;
-  background-color: #0069ff;
-  color: #ffffff;
-  display: flex;
-  flex-direction: column;
-  height: 48px;
-  justify-content: center;
-  text-decoration: none;
-  width: 148px;
-}
-
-/* Old styles above */
-
 * {
 	margin: 0;
 	padding: 0;
@@ -81,7 +66,7 @@ header {
 	transition: all 0.5s ease-in-out;
 }
 
-.btn {
+.slidebtn {
 	height: 60px;
 	width: 300px;
 	margin: 20px auto;
@@ -91,6 +76,19 @@ header {
 	justify-content: space-around;
 	align-items: center;
 }
+
+.button {
+	height: 60px;
+	width: 400px;
+	border-radius: 50px;
+	background-image: linear-gradient(to right,
+    var(--tertiary-color),
+    var(--accent-color));
+	font-size: 22px;
+	border: none;
+	cursor: pointer;
+	margin-top:4%
+  }
 
 .login,
 .register {
