--- a/css/members.css
+++ b/css/members.css
@@ -14,6 +14,13 @@ body {
     overflow:hidden;
 }
 
+h1 {
+
+  font-family: "Poppins", sans-serif;
+  text-align: center;
+   color:#054A91;
+
+}
 
 /* Add a black background color to the top navigation */
 .topnav {
@@ -67,13 +74,15 @@ body {
     padding:  10px;
     margin-left: 250px;
     margin-right: 250px;
+    -ms-grid-row-align: center;
+    -ms-grid-column-align: center;
   }
   .grid-item {
     text-align: center;
     font-size: 20px;
     letter-spacing: 1px;
     font-family: 'Montserrat';
-    color: #007D2F; 
+    color: #054A91; 
     padding: 20px 0;
   }
   .grid-item img {
