--- a/css/styles.css
+++ b/css/styles.css
@@ -23,11 +23,14 @@ body {
 	flex-direction: column;
 	overflow:hidden;
 	gap: 30px;
-  /*margin-bottom:50px; FIX LATER  */
 	background-color: var(--accent-color);
 }
 
 .content {
+	position: absolute;
+	top:50%;
+	left:50%;
+	transform: translate(-50%, -50%);
 	justify-content: center;
 	align-items: center;
 	display: flex;
@@ -42,7 +45,7 @@ header {
 	align-items: center;
 	justify-content: center;
 	gap: 8px;
-	padding: 25px;
+	padding: 10px;
 }
 
 .heading {
