--- a/css/contacts.css
+++ b/css/contacts.css
@@ -13,6 +13,15 @@ h1{
     table-layout: fixed;
   }
 
+  .content-contacts
+  {
+    justify-content: center;
+	align-items: center;
+	display: flex;
+	flex: 1 0 100%;
+	flex-direction: column;
+  }
+  
   .tbl-header{
     background-color: #054a91;
    }
