--- a/css/navbar.css
+++ b/css/navbar.css
@@ -9,20 +9,18 @@
 .navbar {
 	background-color: var(--primary-color);
 	color: #fff;
-	position: fixed;
-	top: 0;
 	width: 100%;
-	z-index: 2000;
 }
   
 .navbar-container {
     max-width: 100%;
-    margin: 0 auto;
     display: flex;
+    flex-basis: 100%;
     justify-content: space-between;
     align-items: center;
     padding-right:5%;
     padding-left: 5%;
+    min-width: 80%;
 }
 
 .logo {
