fixed some more formatting problems

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -10,7 +10,7 @@
 body{
     background: -webkit-linear-gradient(left, #81a4cd, #dbe4ee);
     background: linear-gradient(to right, #81a4cd, #dbe4ee);
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
   }
 
 /*Contact CSS */
