--- a/css/navbar.css
+++ b/css/navbar.css
@@ -10,7 +10,7 @@
 	background-color: var(--primary-color);
 	color: #fff;
 	width: 100%;
-    font-size: 16px;
+    font-size: 16px !important;
 }
   
 .navbar-container {
