fixed user photo display in settings page, tried to keep text consistency across pages

--- a/css/members.css
+++ b/css/members.css
@@ -8,6 +8,12 @@
     --accent-color: #DBE4EE;
 }
 
+* {
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+
 /* body formatting */
 body {
     font-family: "Poppins", sans-serif;
