--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ header {
 
 .content-container {
 	width: 100%;
-	overflow:scroll;
+	overflow:hidden;
 	display: inherit;
 	flex-direction: column;
 	align-items: center;
