--- a/css/contacts.css
+++ b/css/contacts.css
@@ -29,8 +29,8 @@ h1{
   }
 
   .table-section {
-    margin-left:80px;
-    margin-right:80px;
+    margin-left:100px;
+    margin-right:100px;
   }
 
   .content-contacts
@@ -56,7 +56,6 @@ h1{
 
   th{
     padding: 20px 15px;
-    text-align: left;
     font-weight: 500;
     font-size: 16px;
     color: white;
@@ -69,9 +68,22 @@ h1{
     color: white;
   }
 
+  th,td{
+    border-bottom: 1px solid black;
+    word-break: break-all;
+    text-align: center;
+  }
+
+  td img{
+    height: 40px;
+    width: 40px;
+    object-fit: cover;
+    border-radius: 100%;
+    border: 2px solid black;
+  }
+
   td{
     padding: 15px;
-    text-align: left;
     vertical-align:middle;
     font-weight: 400;
     font-size: 14px;
@@ -79,6 +91,33 @@ h1{
     border-bottom: solid 1px #3e7cb1;
   }
   
+/* add user button */
+.add_new{
+  padding: 12px;
+  border-radius: 50%;
+  display: inline-block;
+  color: black;
+  background-color: white;
+  font-size: 64px;
+}
+
+.table_button{
+  padding: 12px;
+  border-radius: 50%;
+  display: inline-block;
+  color: black;
+  background-color: transparent;
+  overflow: hidden;        
+  cursor: pointer;
+  border: none;
+  font-size: 20px;
+}
+
+input{
+  padding: 10px 15px;
+  border-radius: 6px;
+}
+
   /* for custom scrollbar for webkit browser*/
   
   ::-webkit-scrollbar {
