workings of contacts table

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -14,44 +14,70 @@ body{
   }
 
 /*Contact CSS */
-h1{
-    font-size: 30px;
-    color: #fff;
-    text-transform: uppercase;
-    font-weight: 300;
-    text-align: center;
-    margin-bottom: 15px;
-  }
 
-  table{
-    width:100%;
-    table-layout: fixed;
-  }
+.content-contacts
+{
+  padding-top: 10px;
+  margin-top: 40px;
+  justify-content: end;
+  align-items: end;
+  display: flex;
+  flex-direction: column;
+  width: 1000px;
+  background-color: white;
+  border-radius: 2% 2% 0 0;
+  box-shadow: 8px 8px 20px #054a91;
+  height:650px;
+  justify-content:start;
+}
 
-  .table-section {
-    margin-left:80px;
-    margin-right:80px;
-  }
+.border-container {
+  border: 3px solid black;
+  height:610px;
+  max-height: 620px;
+  justify-content: start;
+  display: block;
+  overflow: scroll;
+}
 
-  .content-contacts
-  {
-    margin-top:100px;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex: 1 0 100%;
-    flex-direction: column;
-  }
-  
+.table-height {
+  width:100%;
+  table-layout:fixed;
+  margin-bottom:0;
+  max-height:600px;
+}
+
+.table-border {
+  justify-content: start;
+}
+
+.body-section {
+  min-height:450px !important;
+  border: 2px solid black;
+}
+
+.table td {
+  vertical-align: middle;
+}
+
   .tbl-header{
     background-color: #054a91;
+    max-height:50px !important;
+    overflow: hidden;
    }
 
   .tbl-content{
     height:400px;
     overflow-x:auto;
     margin-top: 0px;
-    border: 1px solid #3e7cb1;
+  }
+
+  .image-margins {
+    margin-right:20px;
+  }
+
+  tr{
+    border: 2px solid black !important; 
   }
 
   th{
@@ -69,9 +95,23 @@ h1{
     color: white;
   }
 
+  th,td{
+    word-break: break-all;
+    text-align: left;
+  }
+
+  td img{
+    height: 40px;
+    width: 40px;
+    object-fit: cover;
+    border-radius: 100%;
+    border: 2px solid black;
+    margin-left:5%;
+  }
+
   td{
     padding: 15px;
-    text-align: left;
+    flex: 1 0 0;
     vertical-align:middle;
     font-weight: 400;
     font-size: 14px;
@@ -79,6 +119,94 @@ h1{
     border-bottom: solid 1px #3e7cb1;
   }
   
+/* add user button */
+.add_new{
+  position: relative;
+  display: flex;
+  margin-right: 1100px;
+  height: 50px;
+  width: 50px;  
+  border-radius: 100%;
+  background-color: #004e9d;
+  justify-content: center; 
+  align-items: center;
+  font-size: 25px;
+  color: white;
+  border: 2px solid black;
+}
+
+#addRow{
+  display:none;
+}
+
+.check{
+  background-color: transparent;
+  color: black;
+  cursor: pointer;
+  border: none;
+  font-size: 25px;
+}
+
+.check:hover, .table_button:hover{
+  color: white;
+  font-size: 26px;
+}
+
+.test {
+  padding:0 !important;
+  justify-content: center;
+  margin:0;
+}
+
+.add_new:hover{
+  background-color: #053f79;
+}
+
+.table_button{
+  padding: 12px;
+  border-radius: 50%;
+  display: inline-block;
+  color: black;
+  background-color: transparent;
+  overflow: hidden;        
+  cursor: pointer;
+  border: none;
+  font-size: 20px;
+}
+
+.box{
+  height:30px;
+  display: flex;
+  cursor: pointer;
+  padding: 10px 20px;
+  background: transparent;
+  align-items: center;
+}
+
+.box:hover input{
+  width: 300px;
+  border: 2px solid black;
+}
+
+.box input{
+  width: 0;
+  outline: none;
+  border: none;
+  font-weight: 500;
+  transition: 0.8s;
+  background: white;
+  border-radius: 30px;
+}
+
+.box a{
+  color: black;
+  font-size: 28px;
+  display: flex;
+}
+#tBody {
+  min-height:400px;
+}
+
   /* for custom scrollbar for webkit browser*/
   
   ::-webkit-scrollbar {
