--- a/css/contacts.css
+++ b/css/contacts.css
@@ -174,6 +174,18 @@ body{
   font-size: 20px;
 }
 
+.load_button{
+  background-color: transparent;
+  font-size: 30px;
+  cursor: pointer;
+  border: none;
+  color: white;
+}
+
+.load_button:hover{
+  color: black;
+}
+
 .box{
   height:30px;
   display: flex;
